--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,10 @@ inputs:
     description: "path or pattern to TEI files"
     required: false
     default: "tei/*.xml"
+  fail:
+    description: "exit with error code when validation fails"
+    required: false
+    default: "yes"
 runs:
   using: "docker"
   image: "Dockerfile"
