Rename 'fail' input to 'fatal'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         id: test-default
         uses: ./
         with:
-          fail: no
+          fatal: no
 
       - name: Test Valid File
         id: test-valid
