Add support for the DraCor Schema
This is a major revision renaming the action inputs and adding the 'schema'
input allowing to choose between the TEI_all and DraCor schemas.
With this revision we also support other schema versions than the bundled
ones. Recent versions are still bundled but if an unbundled one is
requested, the action will attempt to download it from the known location.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,27 @@ jobs:
         with:
           fatal: no
 
+      - name: Test DraCor Schema
+        id: test-dracor
+        uses: ./
+        with:
+          schema: dracor
+          fatal: no
+
       - name: Test Valid File
         id: test-valid
         uses: ./
         with:
-          tei-files: tei/valid.xml
+          files: tei/valid.xml
 
       - name: Test No Files
         id: test-no-files
         uses: ./
         with:
-          tei-files: tei/nosuchfile*
+          files: tei/nosuchfile*
+
+      - name: Test Unknown Schema
+        id: test-unknown-schema
+        uses: ./
+        with:
+          schema: foo
