--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   version:
     description: "Schema version to validate against"
     required: false
-    default: "4.9.0"
+    default: ""
   files:
     description: "Path or pattern to TEI files"
     required: false
